@@ -1,3 +1,6 @@
+1905.	[bug]		Recursive clients soft quota support wasn't working
+			as expected. [RT #15103]
+
 1904.	[bug]		A escaped character is, potentially, converted to
 			the output character set too early. [RT #14666]
 
